# ChangeLog for net-misc/networkmanager
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/networkmanager/ChangeLog,v 1.82 2010/08/23 11:44:36 dagger Exp $

*networkmanager-0.8.1-r4 (23 Aug 2010)

  23 Aug 2010; Robert Piasek <dagger@gentoo.org>
  -networkmanager-0.8.1-r3.ebuild, +networkmanager-0.8.1-r4.ebuild:
  Updated ifnet plugin. Added extra kernel checks.
  Fixes bugs: #333257, #333639, #333785

  23 Aug 2010; Robert Piasek <dagger@gentoo.org>
  networkmanager-0.8-r1.ebuild, files/nm-system-settings.conf,
  +files/nm-system-settings.conf-ifnet:
  Added separate file for system-settings with Gentoo plugin.

  20 Aug 2010; Markos Chandras <hwoarang@gentoo.org>
  networkmanager-0.8-r1.ebuild:
  Stable on amd64 wrt bug #321593

*networkmanager-0.8.1-r3 (17 Aug 2010)

  17 Aug 2010; Robert Piasek <dagger@gentoo.org>
  -networkmanager-0.8.1-r2.ebuild, +networkmanager-0.8.1-r3.ebuild:
  NM now depends on ppp-2.4.5. Fixed bug #330665

*networkmanager-0.8.1-r2 (17 Aug 2010)

  17 Aug 2010; Robert Piasek <dagger@gentoo.org>
  -networkmanager-0.8.1-r1.ebuild, +networkmanager-0.8.1-r2.ebuild,
  +files/networkmanager-0.8.1-CVE-2010-1172.patch,
  +files/networkmanager-0.8.1-dhclient3.patch,
  files/networkmanager-0.8.1-dhcp-configure.patch,
  +files/networkmanager-0.8.1-glib-2.25.12-workaround.patch,
  files/nm-system-settings.conf:
  Gentoo specyfic plugin is now enabled by default!
  Backported some patches. This should fix bugs #331509, #331547, #332157

  13 Aug 2010; Christian Faulhammer <fauli@gentoo.org>
  networkmanager-0.8-r1.ebuild:
  stable x86, bug 321593

*networkmanager-0.8.1-r1 (04 Aug 2010)

  04 Aug 2010; Robert Piasek <dagger@gentoo.org>
  -networkmanager-0.8.1.ebuild, +networkmanager-0.8.1-r1.ebuild,
  +files/networkmanager-0.8.1-dhcp-configure.patch:
  Updated dhcp client configure option (bug #330659) - thanks Marco Paolone