@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/networkmanager
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/networkmanager/ChangeLog,v 1.82 2010/08/23 11:44:36 dagger Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/networkmanager/ChangeLog,v 1.83 2010/08/23 14:29:11 dagger Exp $
+
+*networkmanager-0.8.1-r5 (23 Aug 2010)
+
+  23 Aug 2010; Robert Piasek <dagger@gentoo.org>
+  -networkmanager-0.8.1-r4.ebuild, +networkmanager-0.8.1-r5.ebuild:
+  explicitly disable dhclient if dhcpcd is enabled. That should finally fix
+  bug #331547
 
 *networkmanager-0.8.1-r4 (23 Aug 2010)
 
